--- a/index.Rmd
+++ b/index.Rmd
@@ -7,13 +7,11 @@ site: bookdown::bookdown_site
 
 # Introduction
 
-The broad topic of this project is “colonization”. However, we recognized early on that the scope of this subject is very broad and requires extensive historical work to truly understand and contextualize any data visualization. We worked on a subset of numerical data and indicators colonized countries in an endeavor to explore the potential impact of colonization. 
+The broad topic of this project is colonization. However, we recognized early on that the nature of this subject meant it requires extensive historical work to contextualize data visualizations. Although we lacked deep historical knowledge on the subject, we hoped to use data to explore the potential impact of colonization, and potentially find trends, relationships, and/or indications that could be interesting to examine historically.
 
-During our research for interesting datasets, we stumbled on Professor Paul Hansel’s Colonial History Data Set (within the Issues Correlates of War Project). We supplemented it with datasets that are detailed further in the project.
-
-We endeavoured to explore:
+The questions that intrigued us included:
 - What is the relationship between colonization and the current economic/social health of a country?
 - What can we discover about the economic impact of colonialism overtime?
 - What patterns can we find regarding the way in which countries' experienced colonialism (level of economic transformation, violence of independence, etc.)? 
 
-Perhaps as in correlation with that interestingness, answering these questions proved to be very challenging. Even as we deliver this project there is much more to derive from this data. This is where we are most aware of the shortcomings data scientists face without insufficient domain knowledge. Still, while not being in any way history experts, we appreciated working on such an interesting topic, and feel it is an interesting forray into using numerical tools within the social sciences/humanities.
+Answering these questions proved to be very challenging. Particularly difficult obstacles to analysis included dealing with vasts amounts of missing data, and concern regarding the accuracy of data in the time period we were interested in. As a result we were hesitant to make any claims based on what our visualization. Despite this, even as we deliver this project we recognize that there is much more to be gleaned from this dataset. For example, it's possible to go in depth into a single relationship between a colonizing country and one of its colonies -- what we do here is a broader analysis that could potentially be a starting point for which relationships could be interesting to look at more closely. This is where we became very aware of the importance of domain knowledge for data scientists. Although we are not in any way historians, we found thinking about the challenges of working with historical data fascinating, and feel that this project is an interesting forray into applying data visualization techniques within the social sciences/humanities.
